<resources>00
    <string name="app_name">Calculator</string>
    <string name="txt_initial">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="all_clear">AC</string>
    <string name="backspace">⌫</string>
    <string name="percentage">%</string>
    <string name="power">x<sup><small>y</small></sup></string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="equals">=</string>
    <string name="squareroot">√</string>
    <string name="left_brace">(</string>
    <string name="right_brace">)</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="pi">π</string>
    <string name="is_prime">prime</string>
</resources>