<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="16dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:background="@drawable/border"
        />

        <EditText
            android:id="@+id/txt_Input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="16dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            />


    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:columnCount="4">


            <Button
                android:id="@+id/e"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/e"
                android:onClick="setExpo"
                />

            <Button
                android:id="@+id/pi"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/pi"
                android:onClick="setPi"
                />

            <Button
                android:id="@+id/isPrime"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/is_prime"
                android:onClick="isPrimeOrNot"
                />

            <Button
                android:id="@+id/backspace"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
               android:backgroundTint="@color/backspace"
                android:text="@string/backspace"
                android:onClick="setBackSpace"
                />

            <Button
                android:id="@+id/sqrt"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/squareroot"
                android:onClick="setSqrt"
                />

            <Button
                android:id="@+id/lBrace"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/left_brace"
                android:onClick="setLeftPara"
                />

            <Button
                android:id="@+id/rBrace"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/right_brace"
                android:onClick="setRightPara"
                />

            <Button
                android:id="@+id/ln"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/ln"
                android:onClick="setLn"
                />

            <Button
                android:id="@+id/log"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/log"
                android:onClick="setLog"
                />

            <Button
                android:id="@+id/sin"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/sin"
                android:onClick="setSin"
                />

            <Button
                android:id="@+id/cos"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/cos"
                android:onClick="setCos"
                />

            <Button
                android:id="@+id/tan"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/trigono"
                android:text="@string/tan"
                android:onClick="setTan"
                />

            <Button
                android:id="@+id/allClear"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/ac_color"
                android:text="@string/all_clear"
                android:onClick="setAllClear"
                />

            <Button
                android:id="@+id/percentage"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/operand_color"
                android:text="@string/percentage"
                android:onClick="setPercentage"
                />

            <Button
                android:id="@+id/power"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/operand_color"
                android:text="@string/power"
                android:onClick="setPower"
                />

            <Button
                android:id="@+id/division"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/operand_color"
                android:text="@string/division"
                android:onClick="setDivision"
                />

            <Button
                android:id="@+id/seven"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/seven"
                android:onClick="setSeven"
                />

            <Button
                android:id="@+id/eight"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/eight"
                android:onClick="setEight"
                />

            <Button
                android:id="@+id/nine"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/nine"
                android:onClick="setNine"
                />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:padding="10dp"
                android:backgroundTint="@color/operand_color"
                android:text="@string/multiplication"
                android:onClick="setMultiplication"
                />

            <Button
                android:id="@+id/four"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/four"
                android:onClick="setFour"
                />

            <Button
                android:id="@+id/five"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/five"
                android:onClick="setFive"
                />

            <Button
                android:id="@+id/six"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/six"
                android:onClick="setSix"
                />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:backgroundTint="@color/operand_color"
                android:text="@string/subtraction"
                android:onClick="setSubtraction"
                />

            <Button
                android:id="@+id/one"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:backgroundTint="@color/number_color"
                android:text="@string/one"
                android:onClick="setOne"
                />

            <Button
                android:id="@+id/two"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/two"
                android:onClick="setTwo"
                />

            <Button
                android:id="@+id/three"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/three"
                android:onClick="setThree"
                />

            <Button
                android:id="@+id/addition"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/Black"
                android:padding="10dp"
                android:backgroundTint="@color/operand_color"
                android:text="@string/addition"
                android:onClick="setAddition"
                />

            <Button
                android:id="@+id/zero"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/zero"
                android:onClick="setZero"
                />

            <Button
                android:id="@+id/doubleZero"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/double_zero"
                android:onClick="setDoubleZero"
                />

            <Button
                android:id="@+id/dot"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/number_color"
                android:text="@string/dot"
                android:onClick="setDot"
                />

            <Button
                android:id="@+id/equals"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:backgroundTint="@color/equals_color"
                android:text="@string/equals"
                android:onClick="setEqualsTo"
                />

        </GridLayout>

</LinearLayout>

